Primer intento de EJB de socio.

--- a/GrupoSA-web/src/main/webapp/sociosLista.xhtml
+++ b/GrupoSA-web/src/main/webapp/sociosLista.xhtml
@@ -19,7 +19,7 @@
                 </h:form>
             </c:if>
             
-            <h:dataTable id="socioLista" value="#{sociosBB.getSocios()}" var="soc" class="table">
+            <h:dataTable id="socioLista" value="#{sociosBB.getSociosEJB()}" var="soc" class="table">
                 <h:column>
                     <f:facet name="header">
                         <h:outputText value="Identificador ASDE"/>
