--- a/GrupoSA-web/src/main/webapp/crearSocio.xhtml
+++ b/GrupoSA-web/src/main/webapp/crearSocio.xhtml
@@ -63,9 +63,9 @@
                     <div class="form-group col-md-4">
                         <h:outputLabel for="inputPerfil">Perfil *</h:outputLabel>
                         <h:selectOneMenu id="inputPerfil" value="#{sociosBB.socio.perfil}" required="true" requiredMessage="*Atributo obligatorio*" class="form-control">
-                            <f:selectItem itemLabel="Administrador" itemValue="Administrador"/>
-                            <f:selectItem itemLabel="Scouter" itemValue="Scouter"/>
-                            <f:selectItem itemLabel="Educando" itemValue="Educando"/>
+                            <f:selectItem itemLabel="Administrador" itemValue="ROOT"/>
+                            <f:selectItem itemLabel="Scouter" itemValue="SCOUT"/>
+                            <f:selectItem itemLabel="Educando" itemValue="EDUCANDO"/>
                             <f:selectItem itemLabel="Elegir" noSelectionOption="true"/>
                         </h:selectOneMenu>
                         <h:message for="inputPerfil" style="color: red"/>
