--- a/GrupoSA-web/src/main/webapp/evento.xhtml
+++ b/GrupoSA-web/src/main/webapp/evento.xhtml
@@ -3,24 +3,24 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:composition template="templates/mainLayout.xhtml">
         <ui:define name="title">
             Eventos
         </ui:define>
         <ui:define name="content">
-
+            <h:messages></h:messages>
             <!-- contenido de la página-->
             <div class="row">
                 <h:panelGroup layout="block">
                     <h1 class="titulo_evento"><h:outputText value="#{eventoEduBB.evt.getNombre()}" /></h1>
                 </h:panelGroup>
-
                 <div class="row" style="margin-bottom: 20px;">
                     <img src="resources/images/pesca.jpg" class="col-md-6 img-fluid img-redonda"></img>
                     <h:panelGroup layout="block" class="col-md-6">
                         <p class="desc_evento"><i class="fas fa-angle-left indicador" style="margin-right: 10px"></i> <h:outputText value="#{eventoEduBB.evt.getDescripcion()}" /> <i class="fas fa-angle-right indicador" style="margin-left:3px"></i></p>
-                        <p class="desc_evento"><i class="far fa-calendar"></i> Fecha del evento: <strong><h:outputText value="#{eventoEduBB.evt.getFecha()}" /> </strong></p>
+                        <p class="desc_evento"><i class="far fa-calendar"></i> Fecha del evento: <strong><h:outputText value="#{eventoEduBB.evt.getFecha()}"><f:convertDateTime pattern="yyyy-MM-dd"/></h:outputText> </strong></p>
                     </h:panelGroup>
                 </div>
 
@@ -30,21 +30,35 @@
                 </div>
                 <div class="col-md-12"  style="margin-bottom: 20px;">
                     <h1 class="titulo_evento">¿Quieres venir? ¡Inscríbete!</h1>
-                    <h:form>
-                        <h:commandButton value="Inscribirme" class="btn btn-inscribirse"></h:commandButton>
-                    </h:form>
+                    <c:if test="#{!empty controlAutorizacion.socio}">
+                        <c:if test="#{!eventoEduBB.socioInscrito(controlAutorizacion.socio.id_Socio)}">
+                            <h:form>
+                                <h:commandButton action="#{eventoEduBB.inscribirseEvento(controlAutorizacion.socio.id_Socio)}" value="Inscribirme" class="btn btn-inscribirse"></h:commandButton>
+                            </h:form>
+                        </c:if>
+                        <c:if test="#{eventoEduBB.socioInscrito(controlAutorizacion.socio.id_Socio)}">
+                            <div class="offset-md-2 col-md-8 text-center">
+                                <h4 class="btn btn-apuntado" >¡Ya estás apuntado!</h4>
+                            </div>
+                        </c:if>
+                    </c:if>
+                    <c:if test="#{empty controlAutorizacion.socio}">
+                        <div class="offset-md-2 col-md-8 text-center">
+                            <h4>¡Logeate para apuntarte!</h4>
+                        </div>
+                    </c:if>
                 </div>
                 <div class="col-md-12">
                     <h1 class="titulo_evento">Comentarios</h1>
 
-                    <c:forEach  items="#{comentariosBB.listComen}" var="com">
+                    <c:forEach  items="#{eventoEduBB.listComen}" var="com">
                         <div class="offset-md-2 col-md-8 caja_comentario">
-                            <h:outputText value="#{com.texto}" id="idComentario#{com.getId_comentario()}" ></h:outputText>
+                            <h:outputText value="#{com.texto}" id="idComentario#{com.id_comentario}" ></h:outputText>
 
                             <c:if test="#{!empty controlAutorizacion.socio and com.socio.id_Socio == controlAutorizacion.socio.id_Socio || controlAutorizacion.socio.perfil == 'ROOT'}">
-                                <h:form id="formEditCom#{com.getId_comentario()}">
-                                    <h:inputTextarea value="#{com.texto}" class="textAreaCom d-none" id="idComentarioTexto#{com.getId_comentario()}"></h:inputTextarea>
-                                    <h:commandLink action="#{comentariosBB.editarCom()}" class="btn btn-primary btn_comentar d-none" id="guardarComentario#{com.getId_comentario()}">Guardar <i class="fas fa-comment" style="margin-left: 5px"></i></h:commandLink>
+                                <h:form id="formEditCom#{com.id_comentario}">
+                                    <h:inputTextarea value="#{com.texto}" class="textAreaCom d-none" id="idComentarioTexto#{com.id_comentario}"></h:inputTextarea>
+                                    <h:commandLink action="#{comentariosBB.editarCom(com)}" class="btn btn-primary btn_comentar d-none" id="guardarComentario#{com.getId_comentario()}">Guardar <i class="fas fa-comment" style="margin-left: 5px"></i></h:commandLink>
 
 
                                     <hr ></hr>
@@ -54,10 +68,10 @@
                                             <strong><h:outputText value="#{com.socio.email}"></h:outputText></strong> 
                                         </c:if>
                                         <c:if test="#{!empty com.socio.nombre}">
-                                            <strong><h:outputText value="#{com.socio.nombre}"></h:outputText> <h:outputText value="#{com.socio.apellidos}" style="margin-left:5p;"></h:outputText></strong> 
+                                            <strong><h:outputText value="#{com.socio.nombre}"></h:outputText> <h:outputText value="#{com.socio.apellidos}" style="margin-left:5px;"></h:outputText></strong> 
                                         </c:if>
                                         el dia 
-                                        <strong><h:outputText value="#{com.getFecha()}"></h:outputText></strong> 
+                                        <strong><h:outputText value="#{com.fecha}"><f:convertDateTime pattern="yyyy-MM-dd"/></h:outputText></strong>
                                         <a href="#" class="btn_editarCom" id="editarCom#{com.id_comentario}"><i style="margin-left:10px" class="fas fa-edit"></i></a>
                                         <h:commandLink action="#{comentariosBB.borrarCom(com)}"><i style="margin-left:10px" class="fas fa-trash"></i></h:commandLink>
                                     </div>
@@ -71,10 +85,10 @@
                                         <strong><h:outputText value="#{com.socio.email}"></h:outputText></strong> 
                                     </c:if>
                                     <c:if test="#{!empty com.socio.nombre}">
-                                        <strong><h:outputText value="#{com.socio.nombre}"></h:outputText> <h:outputText value="#{com.socio.apellidos}" style="margin-left:5p;"></h:outputText></strong> 
+                                        <strong><h:outputText value="#{com.socio.nombre}"></h:outputText> <h:outputText value="#{com.socio.apellidos}" style="margin-left:5px;"></h:outputText></strong> 
                                     </c:if>
                                     el dia 
-                                    <strong><h:outputText value="#{com.fecha}"></h:outputText></strong> 
+                                    <strong><h:outputText value="#{com.fecha}"><f:convertDateTime pattern="yyyy-MM-dd"/></h:outputText></strong> 
                                 </div>
 
                             </c:if>
