--- a/GrupoSA-web/src/main/webapp/evento.xhtml
+++ b/GrupoSA-web/src/main/webapp/evento.xhtml
@@ -44,7 +44,7 @@
                     </c:if>
                     <c:if test="#{empty controlAutorizacion.socio}">
                         <div class="offset-md-2 col-md-8 text-center">
-                            <h4>¡Logeate para apuntarte!</h4>
+                            <h4>¡Inicia sesión para apuntarte!</h4>
                         </div>
                     </c:if>
                 </div>
@@ -106,7 +106,7 @@
                     </c:if>
                     <c:if test="#{empty controlAutorizacion.socio}">
                         <div class="offset-md-2 col-md-8 text-center">
-                            <h4>Logeate para comentar</h4>
+                            <h4>Inicia sesión para comentar</h4>
                         </div>
                     </c:if>
 
