--- a/GrupoSA-web/src/main/webapp/cuotasLista.xhtml
+++ b/GrupoSA-web/src/main/webapp/cuotasLista.xhtml
@@ -50,7 +50,7 @@
                         <h:outputText value="Acciones"/>
                     </f:facet>
                     <h:form>
-                        <h:commandLink action="#{cuotasBB.updateCuota(cuot)}"><i class="fas fa-edit"></i></h:commandLink>
+                        <h:commandLink action="#{cuotasBB.modCuota(cuot)}"><i class="fas fa-edit"></i></h:commandLink>
                         &nbsp;
                         <h:commandLink action="#{cuotasBB.deleteCuota(cuot)}"><i class="far fa-trash-alt"></i></h:commandLink>
                         &nbsp;
