Foto perfil fix

--- a/GrupoSA-web/src/main/webapp/crearSocio.xhtml
+++ b/GrupoSA-web/src/main/webapp/crearSocio.xhtml
@@ -80,7 +80,7 @@
                             <f:selectItem itemLabel="Tropa" itemValue="Tropa"/>
                             <f:selectItem itemLabel="Unidad" itemValue="Unidad"/>
                             <f:selectItem itemLabel="Clan" itemValue="Clan"/>
-                            <f:selectItem itemLabel="Elegir noSelectionOption="true""/>
+                            <f:selectItem itemLabel="Elegir" noSelectionOption="true" />
                         </h:selectOneMenu>
                     </div>
                     <div class="form-group col-md-4">
